# OWASP-demo

./: Dockerfile  README.md  pyproject.toml
app/: hasher.py  settings.py  urls.py
webshop/: models.py  urls.py  views.py
webshop/management/commands/: demo_init.py
webshop/migrations/: 0001_initial.py  0002_product_departure_date_product_departure_location_and_more.py  0003_order_customer_request.py  0004_order_total_price.py  0005_passwordreset.py
webshop/templates/: base.html  checkout.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  product_detail.html  product_list.html  profile.html
