[project]
name = "owasp-top-ten-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Jesse Rauha", email = "jesse.rauha@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django (>=5.2,<6.0)"]

[tool.poetry]
packages = [{ include = "owasp_top_ten_demo", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
